--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,6 +1,6 @@
 <h4 class="ui center aligned medium icon header">
   <i class="circular orange coffee icon"></i>
-  Friends
+  Chatroom
 </h4>
 
 <div class="ui two column grid">
@@ -37,6 +37,25 @@
           <a class="item">
             Friends
           </a>
+          <div class="ui dropdown item link user-dropdown">
+          Users <i class="dropdown icon"></i>
+          <div class="menu">
+            <% @users.each do |user| %>
+              <div class="item">
+                <%= user.username %>
+                
+                <% if user.active? %>
+                  <span class="ui green circular label" title="Active"></span>
+                <% else %>
+                  <span class="ui grey circular label" title="Inactive"></span>
+                <% end %>
+
+                <% if user == current_user %>
+                  <span class="ui blue circular label" title="You"></span>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
