--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,15 +3,14 @@
 </h2>
 
 <h4 class="ui center aligned medium icon header">
-  <i class="circular orange power off tiny icon"></i>
-  Log in to continue
+  <i class="circular orange user plus tiny icon"></i>
+  Sign up to join the chat
 </h4>
-
 
 <div class="ui placeholder segment">
   <div class="ui two column very relaxed stackable grid">
     <div class="column">
-      <%= form_for(:session, html: {class: "ui form", role: "form"}, url: login_path) do |f| %>
+      <%= form_for(@user, html: {class: "ui form", role: "form"}) do |f| %>
         <div class="field">
           <%= f.label :username, "Username" %>
           <div class="ui left icon input">
@@ -26,17 +25,15 @@
             <i class="lock icon"></i>
           </div>
         </div>
-        <%= f.button "Login", class: "ui orange submit button" %>
+        <div class="field">
+          <%= f.label :password_confirmation, "Confirm Password" %>
+          <div class="ui left icon input">
+            <%= f.password_field :password_confirmation, placeholder: "Confirm Password" %>
+            <i class="lock icon"></i>
+          </div>
+        </div>
+        <%= f.button "Sign Up", class: "ui orange submit button" %>
       <% end %>
     </div>
-    <div class="middle aligned column">
-      <%= link_to signup_path, class: 'ui big orange button' do %>
-        <i class="signup icon"></i>
-        Sign Up
-      <% end %>
-    </div>
-  </div>
-  <div class="ui vertical divider">
-    Or
   </div>
 </div>
