Add scrollable limit to users list

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -39,7 +39,7 @@
           </a>
           <div class="ui dropdown item link user-dropdown">
             Users <i class="dropdown icon"></i>
-            <div class="menu">
+            <div class="menu user-menu">
               <% @users.each do |user| %>
                 <div class="item">
 
